[package]
name = "tunnelto"
description = "expose your local web server to the internet with a public url"
version = "0.1.9"
authors = ["Alex Grinman <alex@tunnelto.dev>"]
edition = "2018"
license = "MIT"
repository = "https://tunnelto.dev"
readme = "README.md"

[lib]
name = "tunnelto"

[[bin]]
name = "tunnelto"
path = "src/client/main.rs"

[[bin]]
name = "tunnelto_server"
path = "src/server/main.rs"

[features]
subdomain-auth = []

[dependencies]
warp = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
base64 = "0.11.0"
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version= "0.10.1", features = ["tls"]}
tungstenite = "0.10.1"
bytes = "0.5.4"
rand = "0.7.3"
lazy_static = "1.4.0"
hmac-sha256 = "0.1.2"
hex = "0.4.2"
chrono = "0.4.11"
pretty_env_logger = "0.4.0"
dirs = "2.0.2"
log = "0.4.8"
human-panic = "1.0.3"
httparse = "1.3.4"
url = "2.1.1"
structopt = "0.3.12"
colored = "1.9.3"
thiserror = "1.0"
uuid = {version = "0.8.1", features = ["serde", "v4"] }
sha2 = "0.9.0"
indicatif = "0.15.0"

# Subdomain auth
rusoto_core = "0.44.0"
rusoto_dynamodb = "0.44.0"
rusoto_credential = "0.44.0"