[package]
name = "tunnelto_hash"
description = "create hash key to store in sqlite database"
version = "0.1.10"
authors = ["Chris F  Ravenscroft <chris@voilaweb.com>"]
edition = "2018"
license = "MIT"
repository = "https://tunnelto.dev"
readme = "../README.md"

[[bin]]
name = "tunnelto_hash"
path = "src/create_hash.rs"

[dependencies]
base64 = "0.11.0"
sha2 = "0.9.0"
