[package]
name = "tunnelto"
description = "expose your local web server to the internet with a public url"
version = "0.1.13"
authors = ["Alex Grinman <alex@tunnelto.dev>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/agrinman/tunnelto"
readme = "../README.md"

[[bin]]
name = "tunnelto"
path = "src/main.rs"

[dependencies]
tunnelto_lib = { version = "0.1.10", path = "../tunnelto_lib" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version= "0.10.1", features = ["tls"]}
tungstenite = "0.10.1"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
dirs = "2.0.2"
log = "0.4.8"
human-panic = "1.0.3"
structopt = "0.3.12"
colored = "1.9.3"
thiserror = "1.0"
indicatif = "0.15.0"
httparse = "1.3.4"
warp = "0.2.2"
bytes = "0.5.5"
askama = { version = "0.9.0", features = ["serde-json"] }
chrono = "0.4.11"
uuid = {version = "0.8.1", features = ["serde", "v4"] }
hyper = "0.13.6"
http-body = "0.3.1"
serde_urlencoded = "0.6.1"