[package]
name = "tunnelto_server"
description = "expose your local web server to the internet with a public url"
version = "0.1.10"
authors = ["Alex Grinman <alex@tunnelto.dev>"]
edition = "2018"
license = "MIT"
repository = "https://tunnelto.dev"
readme = "../README.md"

[[bin]]
name = "tunnelto_server"
path = "src/main.rs"

[dependencies]
tunnelto_lib = { path = "../tunnelto_lib" }
warp = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
base64 = "0.11.0"
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = "0.4.11"
pretty_env_logger = "0.4.0"
log = "0.4.8"
httparse = "1.3.4"
url = "2.1.1"
thiserror = "1.0"
uuid = {version = "0.8.1", features = ["serde", "v4"] }
sha2 = "0.9.0"

# auth handler
rusoto_core = "0.44.0"
rusoto_dynamodb = "0.44.0"
rusoto_credential = "0.44.0"